welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: not found: value nbBiscuits
	if (nbBiscuits >= 3) {
            ^Poucet:14: error: not found: value nbBiscuits
	if (nbBiscuits <= 2) {
            ^